<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_name" android:title="@string/action_name"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_album" android:title="@string/action_album"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_artist" android:title="@string/action_artist"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_duration" android:title="@string/action_duration"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_date" android:title="@string/action_date"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
